<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.onlineshop.model.Account" />

        <variable
            name="viewModel"
            type="com.example.onlineshop.viewmodel.MainActivityViewModel" />

        <variable
            name="eventListener"
            type="com.example.onlineshop.view.account.EditAccountFragment.EditAccountEventListener" />

        <import type="com.example.onlineshop.utils.InputValidator.InputErrors" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:errorText='@{viewModel.profileFormErrors.contains(InputErrors.INVALID_PASSWORD) ? @string/INVALID_PASSWORD : ""}'
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
            tools:layout_editor_absoluteX="16dp"

            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:text="@={model.password}"
                android:textAppearance="?attr/textAppearanceBody1"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout8"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:text="@={model.email}"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="hosseiny625@gmail.com" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout7"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:text="@={model.address}"
                android:textAppearance="?attr/textAppearanceBody1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:errorText='@{viewModel.profileFormErrors.contains(InputErrors.INVALID_NUMBER) ? @string/INVALID_NUMBER : ""}'
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/number_hint"
                android:text="@={model.number}"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="09033093041" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorText='@{viewModel.profileFormErrors.contains(InputErrors.INVALID_NAME) ? @string/MISSING_NAME : ""}'
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:text="@={model.name}"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="نام و نام خانوادگی"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/edit_account_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{(view)-> eventListener.onSaveClick(view,model,viewModel)}"
            android:text="@string/save_account"
            android:textAppearance="?attr/textAppearanceButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{(view)-> eventListener.onCancelClick(view)}"
            android:text="@string/cancel"
            android:textAppearance="?attr/textAppearanceButton"
            app:layout_constraintEnd_toStartOf="@+id/SaveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>