<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.onlineshop.model.Order" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.account.OrderDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tracking_number"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_submit_date"
                android:textAppearance="?attr/textAppearanceBody2"

                app:layout_constraintEnd_toEndOf="@+id/textView27"
                app:layout_constraintTop_toTopOf="@+id/DataTime" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_transferee_name"
                android:textAppearance="?attr/textAppearanceBody2"

                app:layout_constraintEnd_toEndOf="@+id/textView28"
                app:layout_constraintTop_toTopOf="@+id/userName" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_transferee_number"
                android:textAppearance="?attr/textAppearanceBody2"

                app:layout_constraintEnd_toEndOf="@+id/textView29"
                app:layout_constraintTop_toTopOf="@+id/userNumber" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_transferee_address"
                android:textAppearance="?attr/textAppearanceBody2"

                app:layout_constraintEnd_toEndOf="@+id/textView30"
                app:layout_constraintTop_toTopOf="@+id/userAddress" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_total_price"
                android:textAppearance="?attr/textAppearanceBody2"

                app:layout_constraintEnd_toEndOf="@+id/textView31"
                app:layout_constraintTop_toTopOf="@+id/totalPrice" />

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@{model.state}"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView32"
                tools:text="وضعیت" />

            <TextView
                android:id="@+id/trackingNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{String.valueOf(model.trackingNumber)}"
                android:textAlignment="textEnd"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="477895" />

            <TextView
                android:id="@+id/DataTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{model.submit_date +` - `+ model.submit_time}"
                android:textAlignment="textEnd"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/trackingNumber"
                app:layout_constraintTop_toBottomOf="@+id/trackingNumber"
                tools:text="1400/03/02 - 18:40" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{model.transferee_name}"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/DataTime"
                app:layout_constraintTop_toBottomOf="@+id/DataTime"
                tools:text="حسین زرعی" />

            <TextView
                android:id="@+id/userNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{model.transferee_number}"
                android:textAlignment="textEnd"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                tools:text="09033093041" />

            <TextView
                android:id="@+id/userAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{model.transferee_address}"
                android:textAppearance="?attr/textAppearanceBody1"

                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/userNumber"
                app:layout_constraintTop_toBottomOf="@+id/userNumber"
                tools:text="تبریز، بارنج" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{String.format(`%,d`,model.totalPrice).concat(` تومان `)}"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/userAddress"
                app:layout_constraintTop_toBottomOf="@+id/userAddress"
                tools:text="226.000 تومان" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderProductsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:background="?attr/backgroundColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/state" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.6"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
